--- a/biblio.bib
+++ b/biblio.bib
@@ -314,8 +314,13 @@
 
 @Misc{otb,
   title     = {Orfeo Toolbox},
-  howpublished = {\url{https://www.orfeo-toolbox.org/}},
+  howpublished = {\url{https://www.orfeo-toolbox.org/Applications/RadiometricIndices.html}},
 annote    = {Accessed: 2016-09-28}
+}
+
+@Misc{al:report,
+title= {Operational Feature Selection in Gaussian Mixture Models},
+howpublished= {\url{https://github.com/Laadr/report-features-selection/blob/master/report.pdf}},
 }
 
 @article{dalla2010morphological,
