--- a/paper.tex
+++ b/paper.tex
@@ -576,7 +576,7 @@ GMM models for each fold.
             &+ \underbrace{\frac{1}{2} \ln \left( \frac{|\boldsymbol{\tilde{\Sigma}}^{(k-1)}|}{\sqrt{|\boldsymbol{\Sigma}_i^{(k-1)}| |\boldsymbol{\Sigma}_j^{(k-1)}|}} \right)}_{\substack{\text{computed once per selection step}}} \nonumber \\
             &+ \underbrace{\frac{1}{4} \tilde{\alpha} ( \left[\begin{array}{cc} \mathbf{\tilde{v}}^t & \frac{1}{\tilde{\alpha}} \end{array}\right] (\boldsymbol{\mu}_{i}^{(k)} - \boldsymbol{\mu}_{j}^{(k)}) )^2 + \frac{1}{2} \ln \left( \frac{\tilde{\alpha}}{\sqrt{\alpha_i \alpha_j}} \right)}_{\substack{\text{computed for each augmented set}}},
       \end{align}
-      where $\boldsymbol{\tilde{\Sigma}} = \boldsymbol{\Sigma}_i + \boldsymbol{\Sigma}_j$.
+      where $\boldsymbol{\tilde{\Sigma}} = \boldsymbol{\Sigma}_i + \boldsymbol{\Sigma}_j$ and $\tilde{\alpha}$ and $\mathbf{\tilde{v}}$ are defined as $\alpha$ and $\mathbf{v}$ but using $\boldsymbol{\tilde{\Sigma}}$ instead of $\boldsymbol{\Sigma}$.
     \end{prop}
     
     The  Algorithm~\ref{alg:sffs-update} illustrates  the optimization
@@ -936,12 +936,12 @@ resolution multispectral airborne image.
              & \multicolumn{3}{c}{\bfseries Cohen's kappa} \\ \cmidrule{2-4}
             \# samples by class & 250 & 500 & 1000 \\ \midrule
 
-            GMM SFS kappa & 0.684 (0.025) & 0.698 (0.027) & 0.711 (0.028) \\
-            GMM SFS JM &    0.680 (0.028) & 0.700 (0.028) & 0.710 (0.030) \\
-            GMM SFFS JM &   0.680 (0.028) & 0.700 (0.028) & 0.710 (0.030) \\
+            GMM SFS kappa & {\bfseries 0.684 (0.025)} & {\bfseries 0.698 (0.027)} & {\bfseries 0.711 (0.028)} \\
+            GMM SFS JM &    {\bfseries 0.680 (0.028)} & {\bfseries 0.700 (0.028)} & {\bfseries 0.710 (0.030)} \\
+            GMM SFFS JM &   {\bfseries 0.680 (0.028)} & {\bfseries 0.700 (0.028)} & {\bfseries 0.710 (0.030)} \\
             GMM ridge &     0.611 (0.040) & 0.620 (0.036) & 0.642 (0.034) \\
             KNN &           0.551 (0.035) & 0.563 (0.033) & 0.574 (0.030) \\
-            Random Forest & 0.645 (0.026) & 0.673 (0.023) & 0.693 (0.023) \\
+            Random Forest & 0.645 (0.026) & 0.673 (0.023) & {\bfseries 0.693 (0.023)} \\
             \bottomrule
         \end{tabular}
     \end{table}
@@ -954,12 +954,12 @@ resolution multispectral airborne image.
              & \multicolumn{3}{c}{\bfseries Training time (s)} & \multicolumn{3}{c}{\bfseries Classification time (s)} \\ \cmidrule{2-7}
             \# samples by class & 250 & 500 & 1000 & 250 & 500 & 1000 \\ \midrule
 
-            GMM SFS kappa & 257 & 496 & 955 & 7.7 & 8.6 & 8.7 \\
-            GMM SFS JM &    8.6 & 8.9 & 9.1 & 9.7 & 9.8 & 9.6 \\
-            GMM SFFS JM &   8.8 & 9.0 & 9.3 & 9.7 & 9.8 & 9.8 \\
-            GMM ridge &     71.7 & 105 & 167 & 530 & 530 & 530 \\
-            KNN &           8.9 & 19.6 & 59.7 & 387 & 639 & 887 \\
-            Random Forest & 24.5 & 49.3 & 105 & 33.0 & 41.7 & 45.9 \\
+            GMM SFS kappa & 257             & 496             & 955             & {\bfseries 7.7} & {\bfseries 8.6} & {\bfseries 8.7} \\
+            GMM SFS JM &    {\bfseries 8.6} & {\bfseries 8.9} & {\bfseries 9.1} & {\bfseries 9.7} & {\bfseries 9.8} & {\bfseries 9.6} \\
+            GMM SFFS JM &   {\bfseries 8.8} & {\bfseries 9.0} & {\bfseries 9.3} & {\bfseries 9.7} & {\bfseries 9.8} & {\bfseries 9.8} \\
+            GMM ridge &     71.7            & 105             & 167             & 530 & 530 & 530 \\
+            KNN &           {\bfseries 8.9} & 19.6            & 59.7            & 387 & 639 & 887 \\
+            Random Forest & 24.5            & 49.3            & 105             & 33.0 & 41.7 & 45.9 \\
             \bottomrule
         \end{tabularx}
     \end{table}
